[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "debugpy>=1.8.16",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.33",
    "langfuse>=3.6.1",
    "langgraph>=0.2.6",
    "langgraph-api>=0.4.27",
    "langgraph-sdk>=0.2.6",
    "load-dotenv>=0.1.0",
    "minsearch>=0.0.4",
    "mlflow>=3.4.0",
    "python-dotenv>=1.0.1",
    "tqdm",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "typer>=0.16.0",
    "polars>=1.37.0",
    "xlsx2csv",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
